--- a/WPF/WPFSamples/ValidationSample/MainWindow.xaml
+++ b/WPF/WPFSamples/ValidationSample/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Style TargetType="TextBox">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
-                    <Setter Property="ToolTip" Value="{Binding Path=(Validation.Errors)[0].ErrorContent, RelativeSource={x:Static RelativeSource.Self}}" />
+                    <Setter Property="ToolTip" Value="{Binding Path=(Validation.Errors)[0].ErrorContent,  RelativeSource={RelativeSource Mode=Self}}" />
                 </Trigger>
             </Style.Triggers>
         </Style>
